# flux-local-inference

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
notebooks/: 01_exploration.ipynb
scripts/: benchmark.py  check_environment.py  download_model.py  smoke_test.py
src/: config.py  generate.py  history.py  pipeline.py  ui.py
tests/: test_config.py  test_history.py  test_pipeline.py
