[project]
name = "flux-local-inference"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "huggingface-hub>=1.14.0",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.8.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
