[project]
name = "flux-local-inference"
version = "0.1.0"
description = "Local FLUX.1 [schnell] inference pipeline tuned for 8 GB Turing hardware."
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "gradio>=6.14.0",
    "huggingface-hub>=1.14.0",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Expose `src` as the importable package so `from src.config import ...`
# works regardless of cwd (notebook, `python -m`, `python scripts/foo.py`).
packages = ["src"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
